--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123096548-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-123096548-1');
+    </script>
+
     <meta charset='utf-8' />
     <title>Fightinggame.community</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
