--- a/assets/static/index.html
+++ b/assets/static/index.html
@@ -97,13 +97,13 @@
       var discord = ''
       var twitter = ''
       var facebook = ''
-      if (properties.discord != "null") {
+      if (properties.discord != "") {
         discord = `<a href="${properties.discord}" target="_blank"><h2>Discord</h2></a>`
       }
-      if (properties.twitter != "null") {
+      if (properties.twitter != "" && properties.twitter !== null) {
         twitter = `<a href="${properties.twitter}" target="_blank"><h2>Twitter</h2></a>`
       }
-      if (properties.facebook != "null") {
+      if (properties.facebook != "" && properties.facebook !== null) {
         facebook = `<a href="${properties.facebook}" target="_blank"><h2>Facebook</h2></a>`
       }
       return `<h1>${properties.name}</h1>
